Added a navigation bar with a menu with a link and settings. Added 2 icons Added some strings Added some colors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Kasa-Ki</string>
+    <string name="upload">Publicar</string>
+    <string name="settings">Configurações</string>
+    <string name="slogan">Encontra serviços mais baratos AKI.</string>
+    <string name="main">Publica.AKI</string>
 </resources>
