--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,30 @@
 <resources>
-    <string name="app_name">Kasa-Ki</string>
+    <string name="app_name">KASA-KI</string>
     <string name="upload">Publicar</string>
     <string name="settings">Configurações</string>
     <string name="slogan">Encontra serviços mais baratos AKI.</string>
     <string name="main">Publica.AKI</string>
+
+    <!-- -->
+    <string-array name="cities">
+        <item>Selecione a província</item>
+        <item>Luanda</item>
+        <item>Bengo</item>
+        <item>Benguela</item>
+        <item>Bié</item>
+        <item>Cabinda</item>
+        <item>Cuando-Cubango</item>
+        <item>Cuanza Sul</item>
+        <item>Cunene</item>
+        <item>Huambo</item>
+        <item>Huíla</item>
+        <item>Lunda Norte</item>
+        <item>Lunda Sul</item>
+        <item>Malanje</item>
+        <item>Moxico</item>
+        <item>Namibe</item>
+        <item>Uíge</item>
+        <item>Zaire</item>
+    </string-array>
+
 </resources>
